<resources>
    <string name="app_name">Coffee Shop</string>
    <string name="app_shop">Coffee Shop One Piece</string>
    <string name="app_since">\@2017</string>
    <string name="main_menu_coffee">Coffee Shop</string>
    <string name="main_menu_about">About</string>
    <string name="main_menu_top_menu">Top Menu</string>
    <string name="main_menu_quit">Quit</string>
    <string name="msg_box_quit">Apakah Anda yakin ingin keluar?</string>
    <string name="msg_box_quit_positif_btn">Ya</string>
    <string name="msg_box_quit_negative_btn">Tidak</string>
    <string name="shop_name">Name</string>
    <string name="shop_menu">Menu</string>
    <string name="shop_rd_btn_choocolate">Choocolate</string>
    <string name="shop_rd_btn_mocha">Mocha</string>
    <string name="shop_btn_minus">-</string>
    <string name="shop_btn_plus">+</string>
    <string name="shop_btn_price">Price : </string>
    <string name="shop_btn_reset">Reset</string>
    <string name="shop_btn_order">Order</string>
    <string-array name="menu_category">
        <item>Choice Flavor</item>
        <item>Coofee</item>
        <item>Tea</item>
        <item>Milk</item>
    </string-array>

</resources>
