<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="id.co.androidkejar.project1.ShopActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/mFirstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:hint="@string/shop_name"
            android:text=""
            android:textSize="14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/shop_menu"
            android:textSize="14sp" />

        <Spinner
            android:id="@+id/mMenu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"></Spinner>

        <RadioGroup
            android:id="@+id/mFlavorGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:textSize="14sp">

            <RadioButton
                android:id="@+id/mFlavorChoocolate"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/shop_rd_btn_choocolate"
                android:textSize="14sp" />

            <RadioButton
                android:id="@+id/mFlavorMocha"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/shop_rd_btn_mocha"
                android:textSize="14sp" />
        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:text="Menu"
            android:textSize="14sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1">

            <Button
                android:id="@+id/mBtnMinus"
                android:layout_width="41dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/shop_btn_minus"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/mQuantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:padding="16dp"
                android:text="0"
                android:textSize="16dp" />

            <Button
                android:id="@+id/mBtnPlus"
                android:layout_width="41dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/shop_btn_plus"
                android:textSize="14sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/mTextPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/shop_btn_price"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/mBtnReset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:padding="16dp"
                android:text="@string/shop_btn_reset"
                android:textSize="14sp" />

            <Button
                android:id="@+id/mBtnOrder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:padding="16dp"
                android:text="@string/shop_btn_order"
                android:textSize="14sp" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
